# meng

./: CMakeLists.txt  HFO2_deployed.pth  Makefile  README  a-HfO2.pth  aHfO2_12000  aHfO2_2600.xyz  aHfO2_768.xyz  my_module_model.pt  npt-mtk-bench  npt-mtk-scale  npt-mtk.cpp  pytorch_script.py
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  npt-mtk
build3/: CMakeCache.txt  Makefile  cmake_install.cmake  npt-mtk
trash/: mt19937.cpp  nhc.cpp  nhc.h
